snapshots/care/data4life/hc-result-sdk-kmp/error/0.1.0-SNAPSHOT/error-0.1.0-20210817.110420-3-sources.jar.sha512
2983d0a4be049b0b89a4c3439a0d4dd9c3ddd022c48af479241766daf075084cfecf761bd6de567fe3f06d2048763dc4be8fb3d415273d839f1345dbfec9c7ba